fix: adjust spacing and padding in footer and home page components for improved layout consistency

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ button {
 }
 
 .contain {
-  @apply md:px-[60px] px-5 md:py-[40px] py-10;
+  @apply md:px-[60px] px-5 md:py-10 py-5;
 }
 
 .footer-accordion-enter {
